# namings

./: MANIFEST.in  Makefile  README.rst  pyproject.toml
docs/: CNAME  index.html  v1.0.rst
src/namings/: __init__.py
src/namings/_utils/: digest.py
src/namings/abc/: BaseNamingABC.py  FrozenNamingABC.py  NamingABC.py
src/namings/core/: BaseNaming.py  FrozenNaming.py  Naming.py
src/namings/tests/: __init__.py  test_both_classes.py  test_frozen.py  test_not_frozen.py
src/namings/typing/: SupportsKeysAndGetitem.py
