[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=64.0",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "copyable>=1.1,<2",
    "setdoc>=1.2.16,<2",
]
description = "This project provides a new family of collections."
keywords = []
license = "MIT"
license-files = [
    "LICENSE.txt",
]
name = "namings"
readme = "README.rst"
requires-python = ">=3.11"
version = "1.0.5+local.18"

[project.urls]
Download = "https://pypi.org/project/namings/#files"
Index = "https://pypi.org/project/namings/"
Source = "https://github.com/johannes-programming/namings/"
Website = "https://namings.johannes-programming.online/"
