[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=77.0",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = [
    "copyable>=1.0,<2",
    "setdoc>=1.2.20,<2",
]
description = "This project provides a new family of collections."
keywords = []
license = "MIT"
license-files = [
    "LICENSE.txt",
]
name = "namings"
readme = "README.rst"
requires-python = ">=3.11"
version = "1.0.0.dev3+local"

[project.urls]
Download = "https://pypi.org/project/namings/#files"
Index = "https://pypi.org/project/namings/"
Source = "https://github.com/johannes-programming/namings/"
Website = "https://namings.johannes-programming.online/"
